# hubspot-clean

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/crm_clean/: cli.py  client.py  config.py  reports.py
src/crm_clean/audits/: duplicates.py  incomplete.py  stale.py
tests/: test_duplicates.py  test_incomplete.py  test_stale.py
tests/fixtures/: contacts.json
