[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crm-clean"
version = "0.1.0"
description = "A CLI tool that audits HubSpot CRM records and reports data hygiene issues."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name" }
]

dependencies = [
    "typer>=0.12.0",
    "hubspot-api-client>=8.2.0",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
    "ruff>=0.4.0",
]

[project.scripts]
crm-clean = "crm_clean.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
